# proxy-checker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.tape  pyproject.toml
.github/workflows/: publish.yml  update-proxies.yml
proxies/: README.md  socks5.txt
proxy_checker/: __init__.py  checker.py  cli.py  models.py  protocols.py
tests/: test_checker.py
