[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-proxy-checker"
version = "1.0.0"
description = "Fast async proxy checker — HTTP/HTTPS/SOCKS4/SOCKS5, 500+ proxies/minute"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ProxyStats", email = "hello@proxystats.io" }]
keywords = ["proxy", "proxy-checker", "socks5", "socks4", "async", "scraping", "networking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
]

[project.optional-dependencies]
socks = ["aiohttp-socks>=0.8"]
all = ["aiohttp-socks>=0.8"]

[project.urls]
Homepage = "https://github.com/proxystats/proxy-checker"
Documentation = "https://proxystats.io/proxy-checker"
"Bug Tracker" = "https://github.com/proxystats/proxy-checker/issues"

[project.scripts]
proxy-checker = "proxy_checker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["proxy_checker"]
